Project was divided into modules

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
 
-add_executable(skillbox_26_2 main.cpp regexpr.cpp)
+add_executable(skillbox_26_2 main.cpp regexpr.cpp contact.cpp phone.cpp)
 target_include_directories(skillbox_26_2 PUBLIC ${INCLUDE_DIR})
